# vidwise

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugin/.claude-plugin/: plugin.json
plugin/agents/: frame-analyzer.md
plugin/commands/: vidwise.md
plugin/skills/video-analysis/: SKILL.md
src/vidwise/: __init__.py  __main__.py  cli.py  downloader.py  extractor.py  frames.py  guide.py  transcriber.py  utils.py
src/vidwise/providers/: __init__.py  base.py  claude.py  openai.py
tests/: test_utils.py
