[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vidwise"
version = "0.2.0"
description = "LLMs can't watch videos. vidwise gives them eyes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juan Pablo Djeredjian" },
]
keywords = ["video", "transcript", "whisper", "frames", "llm", "ai", "knowledge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "click>=8.0",
    "openai-whisper>=20231117",
    "yt-dlp>=2023.0",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.optional-dependencies]
fast = ["faster-whisper>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
vidwise = "vidwise.cli:main"

[project.urls]
Homepage = "https://github.com/jpdjere/vidwise"
Repository = "https://github.com/jpdjere/vidwise"
Issues = "https://github.com/jpdjere/vidwise/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vidwise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
